fixed overflow issue on projects page

--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,14 @@
     padding: 0;
     font-family: 'PT Sans', sans-serif;
   }
-  
   h1
   {
     color: black;
   }
 
+  body {
+    overflow-x: hidden;
+  }
   .home,
   .services,
   .products,
