--- a/src/components/ProjectsHero.css
+++ b/src/components/ProjectsHero.css
@@ -1,14 +1,14 @@
 video {
   object-fit: cover;
-  width: 130%;
-  height: 130%;
+  width: 100%;
+  height: 100%;
   position: fixed;
   z-index: -1;
 }
 
 .hero-container {
   /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
-  height: 80vh;
+  height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
